# asteroid_mining

./: CMakeLists.txt  README.md
src/: asteroid.hpp  dimensions_scaler.hpp  main.cpp  math.hpp  math_constants.hpp  model.hpp  progressable_i.hpp  released_payload.hpp  siphon.hpp  view.hpp
